Revert "Update index.html"
This reverts commit 0e891e00712c9ed18254afb90fafcae7ec24829b.

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <body>
-<p class="ex2">I didn't think you'd actually click on this link.</p>
-<p class="ex1">Here, have a cookie :)</p>
+<h1>I didn't think you'd actually click this link.</h1>
+<p>Here, have a cookie :)</p>
 </body>
 </html>
