--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-  
 <!doctype html>
 <html lang="en">
     <head>
@@ -9,17 +8,43 @@
         <meta name="apple-mobile-web-app-capable" content="yes">
         <link rel="stylesheet" href="./resources/ol.css">
         <link rel="stylesheet" href="resources/fontawesome-all.min.css">
-        <link rel="stylesheet" type="text/css" href="resources/horsey.min.css">
-        <link rel="stylesheet" type="text/css" href="resources/ol3-search-layer.min.css">
         <link rel="stylesheet" href="./resources/ol-layerswitcher.css">
         <link rel="stylesheet" href="./resources/qgis2web.css">
+        <style>
+        .ol-geocoder.gcd-gl-container {
+            top: 135px!important;
+            left: .5em!important;
+            width: 2.1em!important;
+            height: 2.1em!important;
+        }
+        .ol-geocoder .gcd-gl-container{
+            width: 2.1em!important;
+            height: 2.1em!important;
+        }
+        .ol-geocoder .gcd-gl-control{
+            width: 2.1em!important;
+        }
+        .ol-geocoder .gcd-gl-expanded {
+            width: 15.625em!important;
+            height: 2.1875em;
+        }
+        .ol-touch .ol-geocoder.gcd-gl-container{
+            top: 180px!important;
+        }
+        .ol-geocoder .gcd-gl-btn {
+            width: 1.375em!important;
+            height: 1.375em!important;
+            top: .225em!important;
+            background-image: none!important;
+        }
+        </style>
 <style>
 .search-layer {
-  top: 135px;
+  top: 170px;
   left: .5em;
 }
 .ol-touch .search-layer {
-  top: 180px;
+  top: 230px;
 }
 </style>
         <style>
@@ -55,6 +80,7 @@
             top: 80px;
         }
         </style>
+        <link href="resources/ol-geocoder.min.css" rel="stylesheet">
 <style>
 .tooltip {
   position: relative;
@@ -97,12 +123,14 @@
 }
 </style>
         <style>
-        #map {
-            width: 1460px;
-            height: 877px;
+        html, body, #map {
+            width: 100%;
+            height: 100%;
+            padding: 0;
+            margin: 0;
         }
         </style>
-        <title></title>
+        <title>Občine in Statistične regije</title>
     </head>
     <body>
         <div id="map">
@@ -115,12 +143,10 @@
         <script src="resources/polyfills.js"></script>
         <script src="./resources/functions.js"></script>
         <script src="./resources/ol.js"></script>
-        <script src="http://cdn.polyfill.io/v2/polyfill.min.js?features=Element.prototype.classList,URL"></script>
-        <script src="resources/horsey.min.js"></script>
-        <script src="resources/ol3-search-layer.js"></script>
         <script src="./resources/ol-layerswitcher.js"></script>
-        <script src="layers/GBdistrict_borough_unitary_region_0.js"></script>
-        <script src="styles/GBdistrict_borough_unitary_region_0_style.js"></script>
+        <script src="resources/ol-geocoder.js"></script>
+        <script src="layers/Obine_1.js"></script><script src="layers/Statistineregije_2.js"></script>
+        <script src="styles/Obine_1_style.js"></script><script src="styles/Statistineregije_2_style.js"></script>
         <script src="./layers/layers.js" type="text/javascript"></script> 
         <script src="./resources/Autolinker.min.js"></script>
         <script src="./resources/qgis2web.js"></script>
