Added lecture arrivals

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
 					<ul class="actions">
 						<li><a href="http://perosu1.github.io/Scottish_Councils" class="button primary icon solid fa-map-marked-alt">Scottish Council Map</a></li>
 						<li><a href="http://perosu1.github.io/SlovenianBordersMap" class="button primary icon solid fa-map-marked-alt">Slovenian Region Map</a></li>
+						<li><a href="https://perosu1.shinyapps.io/lecture_arrivals/" class="button primary icon brands fa-r-project">Lecture Arrivals</a></li
 					</ul>
 					<ul class="actions">
 						<li><a href="#one" class="button icon solid fa-chevron-down scrolly">More</a></li>
